<resources>
    <string name="app_name">MahjongApp</string>
    <string name="hand_mode">Ручной режим</string>
    <string name="auto_mode">Автоматический режим</string>
    <string name="text1">Выберите ваши тайлы</string>
    <string name="text2">выбрать</string>
    <string name="text3">/14 выбрано</string>
    <string name="text4">Пары</string>
    <string name="text5">Поны</string>
    <string name="text6">Чи</string>
    <string name="text7">найти комбинации</string>
    <string name="go_back">начать заново</string>
    <string name="count_score">посчитать очки</string>
    <string name="found_yaku">Найденные яку: </string>
    <string name="han_amount">Количество хан: </string>
    <string name="found_combinations">Найденые комбинации</string>
    <string name="result">Результат</string>
</resources>