<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CombinationsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/found_combinations"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:text="@string/text4"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/pairList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text4" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pairList"
            android:text="@string/text5"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/ponList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text5" />


        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ponList"
            android:text="@string/text6"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/chiList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text6" />

        <Button
            android:id="@+id/scoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chiList"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:text="@string/count_score" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>